fix post preview text getting out of the screen if no space

--- a/src/styles/pages/_thread.scss
+++ b/src/styles/pages/_thread.scss
@@ -26,7 +26,7 @@
     .content {
       display: flex;
       flex-direction: column;
-      width: 100%;
+      width: 90%;
       .post {
         img {
           margin-top: 20px;
